# deneb-cli

./: .gitignore  LEVELUP-PLAN.md  LICENSE  README.md  install.sh  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-hardware-profiling/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/02-compatibility-recommendation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/phases/03-tell-only-setup-cli-qa/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
deneb/: __init__.py  check.py  cli.py  client.py  config.py  fit.py  hardware.py  loop.py  models_catalog.py  recommend.py  setup_advisor.py  tools.py  ui.py
tests/: test_apply_loop.py  test_catalog.py  test_check.py  test_deneb_rule.py  test_fit.py  test_hardware.py  test_recommend.py  test_redteam.py  test_secrets.py  test_setup_advisor.py  test_write_tier.py
tests/fixtures/hardware/: lspci_strix.txt  nvidia-smi_multi.csv  nvidia-smi_single.csv  proc_cpuinfo_amd.txt  proc_meminfo.txt  rocm-smi_discrete_gfx1100.json  rocm-smi_strix_gfx1151.json  rocm-smi_strix_gfx1151.txt  sysctl_hw_memsize.txt  system_profiler_m2max.txt
