[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deneb-cli"
version = "0.1.0"
description = "Deneb — Altronis's local-LLM (Neo) setup + troubleshooting agent for AI boxes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []  # stdlib-only client (urllib/argparse) — trivial install, no deps

[project.scripts]
deneb = "deneb.cli:main"

[tool.setuptools]
packages = ["deneb"]
